:construction: #20: wip of network and send messages